Remove main style

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -44,7 +44,7 @@
 
     </main>
     <footer>
-        <p id='CompanyNameTextThing' style="padding-left: 3em; color: white;"></p>
+        <p id='CompanyNameTextThing'></p>
         <div id="footericonholder">
             <img class='icon' src="../images/icons/phone.svg" alt="" onclick="window.location.href='tel:07392068340'">
             <img class='icon' src="../images/icons/mail.svg" alt="" onclick="window.location.href='mailto:testme@me.com'">
